<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/search_dialog_ic_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="@dimen/small_8dp"
        android:src="@drawable/ic_clear_24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/search"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/bg_gray_bottom_sheet_search_dialog"
        android:ems="10"
        android:hint="@string/what_are_you_looking_for"
        android:inputType="textPersonName"
        android:padding="@dimen/small_8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_search" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/date_area"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/bg_gray_bottom_sheet_search_dialog"
        android:orientation="horizontal"
        android:padding="@dimen/small_8dp"
        app:layout_constraintEnd_toEndOf="@+id/editText"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/editText"
        app:layout_constraintTop_toBottomOf="@+id/editText">

        <LinearLayout
            android:id="@+id/chek_in_text_and_date_area"
            android:layout_width="174dp"
            android:layout_height="52dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/chek_out_text_and_date_area"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/text_check_in"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/check_in"
                android:textColor="@color/black"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/chek_in_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small_8dp"
                android:text="@string/sun_nov_01"
                android:textColor="@color/black"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/chek_out_text_and_date_area"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="#E5E5E5"
            android:orientation="vertical"
            android:paddingStart="1dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/chek_in_text_and_date_area"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/gray_eeeeee"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/small_8dp"
                    android:text="Check out"
                    android:textColor="@color/black"
                    android:textSize="12sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/small_8dp"
                  android:layout_marginTop="@dimen/small_8dp"

                    android:text="Sun, Nov 11"
                    android:textColor="@color/black"
                    android:textSize="16sp" />
            </LinearLayout>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>


    <LinearLayout
        android:id="@+id/totalGuests_text_and_adultsChildren_quantity_area"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintHorizontal_weight="0.6"
        android:layout_marginEnd="@dimen/small_8dp"
        android:background="@drawable/bg_gray_bottom_sheet_search_dialog"
        android:orientation="vertical"
        app:layout_constraintEnd_toStartOf="@id/duration_area"
        app:layout_constraintStart_toStartOf="@id/editText"
        app:layout_constraintTop_toBottomOf="@id/date_area">

        <TextView
            android:id="@+id/text_totalGuests"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/small_8dp"
            android:text="@string/total_guest_s"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/guests_quantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/small_8dp"
            android:layout_marginBottom="@dimen/small_8dp"
            android:text="@string/_2_adults_1_children"
            android:textColor="@color/black"
            android:textSize="16sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/duration_area"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintHorizontal_weight="0.4"
        android:background="@drawable/bg_gray_bottom_sheet_search_dialog"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="@id/editText"
        app:layout_constraintStart_toEndOf="@+id/totalGuests_text_and_adultsChildren_quantity_area"
        app:layout_constraintTop_toTopOf="@+id/totalGuests_text_and_adultsChildren_quantity_area">

        <TextView
            android:id="@+id/text_duration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/small_8dp"
            android:text="@string/duration"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/duration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/small_8dp"
            android:layout_marginBottom="@dimen/small_8dp"
            android:text="1 Night"
            android:textColor="@color/black"
            android:textSize="16sp" />

    </LinearLayout>

    <Button
        android:id="@+id/btn_apply"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/bg_color_primary_corner_6dp"
        android:text="@string/apply"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>
